--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/varmil/WebSta",
   "devDependencies": {
+    "async": "^0.9.0",
+    "body-parser": "^1.8.3",
     "express": "^4.9.4",
     "gulp": "^3.8.8",
+    "mongoose": "^3.8.16",
     "morgan": "^1.3.1",
-    "forever": "^0.11.1",
-    "async": "^0.9.0",
     "mysql": "^2.5.1"
   }
 }
