--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "gulp": "^3.8.8",
     "mongoose": "^3.8.16",
     "morgan": "^1.3.1",
-    "mysql": "^2.5.1"
+    "mysql": "^2.5.1",
+    "redis": "~0.12.1",
+    "underscore": "~1.7.0"
   }
 }
